# mediaremote-adapter

./: .gitignore  .gitmodules  .perltidyrc  CMakeLists.txt  LICENSE  Package.swift  README.md  build.sh  package.json
.build/: build.db  debug.yaml
.build/arm64-apple-macosx/debug/: description.json
.build/arm64-apple-macosx/debug/CIMediaRemote.build/: MediaRemote.m.d  MediaRemoteAdapter.m.d  MediaRemoteAdapterKeys.m.d  module.modulemap
.build/arm64-apple-macosx/debug/MediaRemoteAdapter.build/: MediaController.d  MediaController.swiftdeps  MediaRemoteAdapter-Swift.h  MediaRemoteAdapter.emit-module.d  master.priors  module.modulemap  output-file-map.json  resource_bundle_accessor.d  resource_bundle_accessor.swiftdeps  sources
.build/arm64-apple-macosx/debug/MediaRemoteAdapter.build/DerivedSources/: resource_bundle_accessor.swift
.build/arm64-apple-macosx/debug/MediaRemoteAdapter_MediaRemoteAdapter.bundle/: run.pl
.build/arm64-apple-macosx/debug/ModuleCache/1KO1CH4JSCSE0/: AvailabilityMacros-1R8AB8N4VAFAG.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  DarwinFoundation-1W8U2OOUAA1YQ.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  MachO-20RPYVQSX341K.pcm  ObjectiveC-1G8H182PQX3QE.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  TargetConditionals-1C41IB3E7JLP3.pcm  XPC-T0ZXCAST7PE3.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_iso646-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  _Builtin_stdint-19KE09ZDXQ6Q3.pcm  _Builtin_tgmath-19KE09ZDXQ6Q3.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm  __wctype-47SZ9A199RUD.pcm  _assert-47SZ9A199RUD.pcm  _complex-47SZ9A199RUD.pcm  _ctype-47SZ9A199RUD.pcm  _errno-47SZ9A199RUD.pcm  _fenv-47SZ9A199RUD.pcm  _float-47SZ9A199RUD.pcm  _inttypes-47SZ9A199RUD.pcm  _limits-47SZ9A199RUD.pcm  _locale-47SZ9A199RUD.pcm  _math-47SZ9A199RUD.pcm  _setjmp-47SZ9A199RUD.pcm  _signal-47SZ9A199RUD.pcm  _stdint-47SZ9A199RUD.pcm  _stdio-47SZ9A199RUD.pcm  _stdlib-47SZ9A199RUD.pcm  _string-47SZ9A199RUD.pcm  (+31 more)
.build/arm64-apple-macosx/debug/ModuleCache/ZOM325U37XH3/: ApplicationServices-3NXEUUZF9JJBD.pcm  AvailabilityMacros-1R8AB8N4VAFAG.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  CloudKit-1WXE7QS1BFRPN.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreLocation-NMK8Q44CY4QT.pcm  CoreServices-39NCTJOEW7PQ2.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreVideo-DBBGB2LXU3HG.pcm  Darwin-1FXX23EKWOBA9.pcm  DarwinFoundation-1W8U2OOUAA1YQ.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  IOKit-1IAL9NTK1TABA.pcm  IOSurface-26455DPS9NDS0.pcm  ImageIO-2ZSF831VT29UB.pcm  MachO-20RPYVQSX341K.pcm  Metal-1GCZV9N85NJOH.pcm  ObjectiveC-1G8H182PQX3QE.pcm  OpenGL-H89XJT7GTCP.pcm  QuartzCore-39A8LQKF980J1.pcm  Security-3QCVXOV25KK54.pcm  Symbols-3KC1789KJFX94.pcm  TargetConditionals-1C41IB3E7JLP3.pcm  XPC-T0ZXCAST7PE3.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_iso646-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdatomic-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  _Builtin_stdint-19KE09ZDXQ6Q3.pcm  _Builtin_tgmath-19KE09ZDXQ6Q3.pcm  (+48 more)
.build/arm64-apple-macosx/debug/Modules/: MediaRemoteAdapter.swiftdoc  MediaRemoteAdapter.swiftmodule  MediaRemoteAdapter.swiftsourceinfo
.build/arm64-apple-macosx/debug/index/store/v5/units/: AppKit-2VI8NB39I5AT6.pcm-5IBTFM26MMQ6  ApplicationServices-3NXEUUZF9JJBD.pcm-3CL8PBP3H7NK1  AvailabilityMacros-1R8AB8N4VAFAG.pcm-22PA9T1KV9K71  AvailabilityMacros-1R8AB8N4VAFAG.pcm-NLCMS76YIQTM  CFNetwork-1PNPO1ORVQZLS.pcm-351AKC9B9KX4B  CFNetwork-1PNPO1ORVQZLS.pcm-CE929HZWTQQY  CUPS-1HLHMKUB322XA.pcm-2KVAWFX4H66JT  CloudKit-1WXE7QS1BFRPN.pcm-2LAJEQUIYKELC  ColorSync-3EIM4S8RXNRVI.pcm-1MX77BDFL6HL3  CoreData-1KHK1L2CYC2N6.pcm-4S5XPX0Y57ZB  CoreFoundation-16SA8WK3L6MQN.pcm-IUSXPCAM1OYC  CoreFoundation-16SA8WK3L6MQN.pcm-ZFK7XZY5F5NI  CoreGraphics-1PSDCAYCIV3T9.pcm-36QQV6HO4R7PB  CoreImage-39ZO87840M5PP.pcm-23P84TFT975CV  CoreLocation-NMK8Q44CY4QT.pcm-N5RV7VLOAUMB  CoreServices-39NCTJOEW7PQ2.pcm-20T1EDXPKFFJQ  CoreServices-39NCTJOEW7PQ2.pcm-22V4IGLIP3MX4  CoreText-3FAL1B4J38DIR.pcm-2DQDKTDCJZ8IG  CoreVideo-DBBGB2LXU3HG.pcm-BPC9G5WXQS37  Darwin-1FXX23EKWOBA9.pcm-1ZHZV56VXT9XQ  Darwin-1FXX23EKWOBA9.pcm-3TWOFNT9VDH0N  DarwinFoundation-1W8U2OOUAA1YQ.pcm-25HBC3X9YW00I  DarwinFoundation-1W8U2OOUAA1YQ.pcm-3BFGJZHZFYW82  DiskArbitration-3LBJF5I58QD8.pcm-1CVNV42BJ14Y1  DiskArbitration-3LBJF5I58QD8.pcm-2SSWS62UIQNIR  (+163 more)
.github/workflows/: macos-release-tracker.yml
Sources/CIMediaRemote/: MediaRemoteAdapter.m  MediaRemoteAdapterKeys.m
Sources/CIMediaRemote/include/: MediaRemote.h  MediaRemoteAdapter.h  MediaRemoteAdapterKeys.h
Sources/MediaRemoteAdapter/: MediaController.swift
Sources/MediaRemoteAdapter/Resources/: run.pl
include/: MediaRemoteAdapter.h
media-control/: CMakeLists.txt  README.md
media-control/examples/: now-playing-live.py  xbar-now-playing.1s.py
scripts/: MediaRemote.js  MediaRemoteAdapter.js  MediaRemoteAdapter.min.js  MediaRemoteAdapter.pl  jxa.js  loadFrameworkExample  osascript-example.sh  perl-example.sh  run.pl  test.m  update-readme-badges.py
src/: CMakeLists.txt  Debounce.h  Debounce.m  MediaRemote.h  MediaRemote.m  MediaRemoteAdapter.h  MediaRemoteAdapter.m  MediaRemoteAdapterKeys.h  MediaRemoteAdapterKeys.m
src/adapter/: env.h  env.m  get.m  globals.h  globals.m  keys.h  keys.m  now_playing.h  now_playing.m  seek.m  send.m  stream.m  stream_payload_keys.m  test.m
src/private/: MediaRemote.h  MediaRemote.m
src/test/: NowPlayingTest.m  main.m
src/utility/: Debounce.h  helpers.h  helpers.m
src/utility/NowPlayingTestClient/: NowPlayingTest.h  NowPlayingTest.m  main.m
test/: CMakeLists.txt  run_test.pl  test_harness.m
(+11 files in other folders)
